# ai-agentic-work

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/: jira-story.md
backend/: github_indexer.py  indexer.py  main.py  models.py  search.py
backend/tests/: test_search.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  skill-search.component.ts  skill-search.service.ts  skill.model.ts
jira-agent/: agent.py
skills/code-reviewer/: SKILL.md
skills/data-visualizer/: SKILL.md
skills/docx-writer/: SKILL.md
skills/jira-story-writer/: SKILL.md
skills/mcp-builder/: SKILL.md
skills/pdf-extractor/: SKILL.md
skills/sql-analyst/: SKILL.md
skills/web-scraper/: SKILL.md
